--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - '**' # Ignore all paths for push, will be overridden by job-specific filter
+    # paths-ignore:
+    #   - '**' # Ignore all paths for push, will be overridden by job-specific filter
   workflow_dispatch:
     inputs:
       operation:
