--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,8 +37,11 @@ jobs:
       run: |
         cd lambda
         rm -rf bootstrap function.zip
-        GOOS=linux GOARCH=amd64 go build -o bootstrap main.go
+        go build -o bootstrap main.go
         zip function.zip bootstrap
+      env:
+        GOOS: linux
+        GOARCH: amd64 
 
     - name: CDK Diff
       run: |
@@ -70,21 +73,19 @@ jobs:
       run: |
         cd lambda
         rm -rf bootstrap function.zip
-        GOOS=linux GOARCH=amd64 go build -o bootstrap main.go
+        go build -o bootstrap main.go
         zip function.zip bootstrap
+      env:
+        GOOS: linux
+        GOARCH: amd64
 
     - name: CDK Deploy
       run: |
         npm install aws-cdk aws-cdk-lib ts-node
-        output=$(npx cdk deploy --require-approval never --outputs-file cdk-outputs.json)
-        echo "$output"
-        endpoint=$(jq -r '.["MyStack"].ApiEndpoint' cdk-outputs.json)
-        echo "API Gateway endpoint:" $endpoint
-        echo "::set-output name=api_gateway_endpoint::" $endpoint
-        endpoint="${{ steps.api_gateway.outputs.api_gateway_endpoint }}"
-        response=$(curl -s $endpoint)
-        echo "Response from API Gateway:"
-        echo "$response"
+        npx cdk deploy --require-approval never --outputs-file cdk-outputs.json
+        cat cdk-outputs.json
+        ENDPOINT=$(jq -r '.["MyStack"].ApiEndpoint' cdk-outputs.json)
+        curl $ENDPOINT
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
