--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    # paths-ignore:
-    #   - '**' # Ignore all paths for push, will be overridden by job-specific filter
   workflow_dispatch:
     inputs:
       operation:
@@ -17,7 +15,7 @@ on:
 
 jobs:
   cdk-diff:
-    runs-on: amazonlinux-latest
+    runs-on: amazonl-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
     - name: Checkout code
@@ -37,7 +35,7 @@ jobs:
       run: |
         cd lambda
         rm -rf bootstrap function.zip
-        GOOS=linux GOARCH=amd64 go build -o bootstrap main.go
+        GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bootstrap main.go
         zip function.zip bootstrap
 
     - name: CDK Diff
@@ -50,7 +48,7 @@ jobs:
         AWS_REGION: ${{ secrets.AWS_REGION }}
 
   cdk-deploy:
-    runs-on: amazonlinux-latest
+    runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.operation == 'cdk_deploy'
     steps:
     - name: Checkout code
@@ -70,7 +68,7 @@ jobs:
       run: |
         cd lambda
         rm -rf bootstrap function.zip
-        GOOS=linux GOARCH=amd64 go build -o bootstrap main.go
+        GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bootstrap main.go
         zip function.zip bootstrap
 
     - name: CDK Deploy
@@ -86,6 +84,6 @@ jobs:
     - name: Test API Gateway Endpoint
       run: |
         ENDPOINT=$(jq -r '.["MyStack"].ApiEndpoint' cdk-outputs.json)
-        curl $ENDPOINT
+        curl -f $ENDPOINT
 
   
